@@ -62,8 +62,6 @@ exportMethods(
               "groupval",
               "image",
               "mzrange",
-              "msn2ms",
-              "msnparent2ms",
               "peaks",
               "peaks<-",
               "peakTable",
